# robotarm

./: CLAUDE.md  LICENSE  Makefile  README.md  buttons.h  commands.h  docker-compose.yml  i2c.c  i2c.h  lcd.c  lcd.h  lcd_menu.c  lcd_menu.h  main.c  pca9685.c  pca9685.h  serial.c  serial.h  serial_commands.c  serial_commands.h  uart.c  uart.h
backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: handlers.rs  main.rs  models.rs  serial.rs
firmware/: Makefile  buttons.c  commands.c  flash.sh  lcd.h  lcd_menu.c  lcd_menu.h  pca9685.h  serial.c  uart.c  uart.h
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  vite.config.ts
frontend/src/: App.tsx
